--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "5.2.0",
         "react-scripts": "4.0.3",
+        "recharts": "2.1.1",
         "web-vitals": "^1.0.1"
     },
     "scripts": {
@@ -39,5 +40,6 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    }
+    },
+    "proxy": "http://127.0.0.1:4000"
 }
